Update 6.Extending Collection with Set, SortedSet and NavigableSet.md

--- a/Java Collections Framework/6.Extending Collection with Set, SortedSet and NavigableSet.md
+++ b/Java Collections Framework/6.Extending Collection with Set, SortedSet and NavigableSet.md
@@ -29,7 +29,7 @@ one
 two
 three
 five
-2. SortedSet Interface (TreeSet)
+##2. SortedSet Interface (TreeSet)
 Maintains elements in sorted order.
 Uses Comparator (if provided) or Comparable (if not).
 New Methods:
@@ -52,7 +52,7 @@ public class SortedSetExample {
         System.out.println("SubSet ('b' to 'e'): " + sortedSet.subSet("b", "e")); // [b, c, d]
     }
 }
-3. NavigableSet Interface (TreeSet with More Features)
+##3. NavigableSet Interface (TreeSet with More Features)
 Extends SortedSet (introduced in Java SE 6).
 Implemented by TreeSet.
 Additional Methods:
@@ -85,7 +85,7 @@ public class NavigableSetExample {
         System.out.println("Reversed Set: " + reversedSet); // [e, d, c, b]
     }
 }
-Summary
+##Summary
 Feature	HashSet	TreeSet (SortedSet)	TreeSet (NavigableSet)
 Order	No order	Sorted	Sorted
 Duplicates	❌ No	❌ No	❌ No
